[package]
name = "actix-params-demo"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.13"
mimalloc = { version = "0.1.22", default-features = false }
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
